--- a/package.json
+++ b/package.json
@@ -6,18 +6,9 @@
   "author": "Dmitry Koviazin <dkovyazin@doma.ai>",
   "license": "MIT",
   "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "apollo-link-error": "^1.1.13",
-    "apollo-upload-client": "^17.0.0",
-    "cross-fetch": "^3.1.5",
+    "condo-graphql-client": "^0.0.1",
     "dotenv": "^16.0.2",
-    "falsey": "^1.0.0",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
-    "lodash": "^4.17.21",
-    "pino": "^8.5.0",
-    "pino-std-serializers": "^6.0.0",
-    "pluralize": "^8.0.0",
-    "react": "^18.2.0"
+    "gql": "^1.1.2",
+    "graphql-tag": "^2.12.6"
   }
 }
